--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "outDir": "./bin",
         "allowJs": true,
-        "target": "es6"
+        "target": "es5",
+        "moduleResolution": "Node"
     },
     "include": [
         "./src/**/*"
