--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/inquirer": "0.0.44",
     "@types/node": "^11.10.4",
-    "@types/nodegit": "^0.24.3"
+    "@types/nodegit": "^0.24.3",
+    "typescript": "^3.3.3333"
   }
 }
